--- a/src/css/_data.css
+++ b/src/css/_data.css
@@ -17,6 +17,7 @@
 
 .data-titulo {
     font-size: 3rem;
+    font-weight: normal;
     font-family: var(--fontBislai);
     margin: 0;
     &:after {
@@ -57,6 +58,7 @@
 
 .dataset-title {
     font-size: 2rem;
+    font-weight: normal;
     font-family: var(--fontBislai);
     margin: 0;
 }
