--- a/src/css/_partidos.css
+++ b/src/css/_partidos.css
@@ -39,13 +39,16 @@
 }
 
 .partidos-cabecera-title {
-    font-size: 1.5rem;
+    font-size: 1.25rem;
+    font-weight: normal;
     border-left: 5px solid;
     background-color: var(--psoe);
     font-family: var(--fontBislai);
     color: var(--black);
     margin: 0;
-    width: max-content;
+    width: intrinsic;
+    width: -moz-max-content;
+    width: -webkit-max-content;
     margin-bottom: .5rem;
     border-top-right-radius: 4px;
     border-bottom-right-radius: 4px;
@@ -118,9 +121,9 @@
 }
 
 .partidos-grafico-titulo {
-    font-size: 1.25rem;
+    font-size: 1rem;
+    font-weight: normal;
     font-family: var(--fontBislai);
-    font-weight: bold;
     display: inline-block;
     margin: 0;
     padding: 0;
@@ -154,7 +157,7 @@
 .partidos-grafico-parrafo {
     font-size: 1rem;
     font-family: var(--fontPlex);
-    margin: .5rem 0;
+    margin: .5rem 0 2rem;
 }
 
 .partidos-grafico-parrafo ~ .partidos-grafico-parrafo {
@@ -171,19 +174,28 @@
     max-width: 70%;
     margin: 3rem auto;
     .partidos-grafico-parrafo {
-        max-width: 20rem;
-    }
-    circle.PSOE {
-        background-image: url('../img/psoe.svg');
-        -webkit-background-size: 100%;
-        background-size: 100%;
-
+        max-width: 25rem;
     }
     .line {
         fill: none;
     }
     text {
         font-family: var(--condensed);
+    }
+    .PSOE {
+        fill: var(--psoe);
+    }
+    .CIUDADANOS {
+        fill: var(--ciudadanos);
+    }
+    .ZEC {
+        fill: var(--zec);
+    }
+    .PP {
+        fill: var(--pp);
+    }
+    .CHA {
+        fill: var(--chunta);
     }
     /*stylelint-disable*/
     .axis-x {
@@ -213,15 +225,24 @@
         max-width: 90%;
     }
 
+    .partido-card-top {
+        width: 100%;
+        height: auto;
+    }
+
+    .partido-card-votos,
+    .partido-card-concejales {
+        width: 40%;
+        display: inline-block;
+        margin-right: 1rem;
+        vertical-align: top;
+
+    }
+
     .partidos-cabecera-izda,
     .partidos-cabecera-dcha,
     #historico {
         width: 100%;
-    }
-
-    .partido-card-top {
-        width: 90%;
-        margin: 1rem auto;
     }
 
     .partidos-cabecera-dcha {
@@ -253,7 +274,20 @@
 
     .distrito {
         margin: 0 auto;
-        display: block;
+        display: inline-block;
     }
 
+}
+
+@media only screen and (max-width: 30em) {
+
+    .partidos-cabecera-izda {
+        display: inline-block;
+    }
+
+    .partido-concejales-lista-elemento {
+        &:not(:last-child) {
+            margin-bottom: .5rem;
+        }
+    }
 }
