--- a/src/css/_buscador.css
+++ b/src/css/_buscador.css
@@ -74,7 +74,7 @@ http://www.tipue.com/search
 
 #tipue_search_content {
     max-width: 750px;
-    padding-top: 15px;
+    padding: 3rem 0;
     margin: 0;
 }
 
@@ -99,6 +99,7 @@ http://www.tipue.com/search
 .tipue_search_content_title {
     color: #666;
     margin-top: 21px;
+    font-family: var(--fontBislai);
     &:not(:first-child) {
         border-top: 1px solid #ccc;
         padding: 10px 0;
