--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,6 +1,7 @@
 @import "_reset";
 @import "_variables";
 @import "_comun";
+@import "_c3";
 @import "_plenos";
 @import "_header";
 @import "_buscador";
