--- a/src/css/_plenos.css
+++ b/src/css/_plenos.css
@@ -20,6 +20,13 @@
     }
 }
 
+.flecha-icon {
+    width: 24px;
+    height: 24px;
+    display: inline-block;
+    vertical-align: middle;
+}
+
 .nav-plenos-posterior {
     text-align: right;
 }
